# wasmer-protobuf-example

./: Cargo.toml  Makefile  README.md  guest.wasm
guest/: Cargo.toml  Makefile
guest/src/: build.rs  lib.rs
proto/: score.proto
src/: build.rs  client.rs  foo.html  foo.lua  guest.rs  host.rs  main.rs  main.wasm  server.rs
