[package]
name = "wasm"
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[[bin]]
name = "host"
path = "src/host.rs"

[dependencies]
tonic = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

prost = "0.7.0"
prost-types = "0.7.0"

wasmer = "1.0.2"
wasmer-compiler-llvm = "1.0.2"
wasmer-engine-jit = "1.0.2"
wasmer-engine-native = "1.0.2"


[build-dependencies]
tonic-build = "0.4"
