[package]
name = "wasm"
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "host"
path = "src/host.rs"

[dependencies]
tokio = { version = "1.7.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4.3"
prost = "0.7.0"
prost-types = "0.7.0"
bytes = "1.0.1"

wasmer = "2.0.0"
wasmer-compiler-llvm = "2.0.0"
wasmer-engine-universal = "2.0.0"


[build-dependencies]
tonic-build = "0.4.2"
